# Scraper_task

./: Dockerfile  README.md  pyproject.toml  task.md
src/: logger_config.py  main.py  main_async.py  scraper_interface.py  scraper_interface_async.py
src/b4s/: hh_scraper.py  nyt_scraper.py
src/b4s/asynchronous/: hh_scraper.py  lamoda_scraper.py  nyt_scraper.py
src/b4s/sync/: hh_scraper.py  lamoda_scraper.py  nyt_scraper.py
src/core/: scraper_interface.py
src/core/interface/: scraper_interface.py  scraper_interface_async.py
src/core/schemas/: __init__.py  data.py
src/selenium/: hacker_news_scraper.py  rabota_scraper.py
src/selenium/asynchronous/: hacker_news_scraper.py  lamoda_scraper.py  rabota_scraper.py
src/selenium/sync/: hacker_news_scraper.py  lamoda_scraper.py  rabota_scraper.py
