[tool.poetry]
name = "scraper-task"
version = "0.1.0"
description = "OOP Web Scraper"
authors = ["Daniil Protasenia <danikprotaseney@gmail.com>"]
readme = "README.md"

# System
[tool.poetry.dependencies]
python = "^3.12"

# Poetry core
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Scraper
[tool.poetry.group.scraper]
optional = true

[tool.poetry.group.scraper.dependencies]
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"

# Apps for test build
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

# Dev group
[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"


# Configs
## Linters
[tool.flake8]
exclude = [".git", "__pycache__", "env", "venv"]
max-line-length = 120
max-complexity = 8

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120